<resources>
    <string name="app_name">Proyecto ISW</string>
    <string name="tvUser">Correo</string>
    <string name="tvPass">Password</string>
    <string name="title_activity_nav_drawer">Inicio </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">aguilarsteven@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">COnfiguracion</string>
    <string name="tvTel">Digitar numero telefonico</string>
    <string name="btEnviarCod">Enviar SMS</string>
    <string name="tvDescripcion">Cuando se selecciona el boton se enviara un codigo de verificacion el cual debera ingresar en el siguiente campo</string>
    <string name="btIngresar">Ingresar</string>
    <string name="title_activity_maps">Map</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_lugar_recycle_v">LugarRecycleVActivity</string>
    <string name="btRegresar">Regresar</string>


    <!--Preferencias-->
    <string name="mnConfigur">Configuración</string>
    <string name="prtMusica">Cambiar Imagen</string>
    <string name="prsMusica">Cambiar imagen de fondo</string>
    <string name="prtBtn">Botones</string>
    <string name="prsBtn">Esconder botones de regresar</string>
    <string name="prsLog">Determina el tipo que se desea almacenar</string>
    <string name="prtUbicacion">Ubicacion</string>
    <string name="prsUbicacion">Determinar la ubicacion que se almacenara</string>
    <string name="prsMaximo">Número máximo de intentos para adivinar</string>
    <string name="prtNivel">Color Activity Menu</string>
    <string name="prsNivel">Cambiar color de la app en el activity menu</string>
    <string name="btPreferencias">ver preferencias</string>
    <string name="prtLog">Tipo</string>


    <string name="tvIngresoDescrip">Favor seleccionar el metodo de ingreso</string>
    <string name="btCorreo">Correo</string>
    <string name="btTelefono">Telefono</string>
    <string name="btGoogle">Google</string>
    <string name="btIngresarGoogle">Accesar Google</string>

    <string name="btAplicar">Aplicar preferencias</string>

</resources>
