<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="musica"
        android:summary="@string/prsMusica"
        android:title="@string/prtMusica" />
    <EditTextPreference
        android:defaultValue="3"
        android:key="intentos"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/prsMaximo"
        android:title="@string/prtMaximo" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/tiposNivel"
        android:entryValues="@array/tiposNivelValores"
        android:key="nivel"
        android:summary="@string/prsNivel"
        android:title="@string/prtNivel" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="log"
        android:summary="@string/prsLog"
        android:title="@string/prtLog" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/tiposFiltro"
        android:entryValues="@array/tiposFiltroValores"
        android:key="filtro"
        android:summary="@string/prsFiltro"
        android:title="@string/prtFiltro" />
</PreferenceScreen>