<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginTelefonoActivity">

    <TextView
        android:id="@+id/tvTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvTel"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="124dp" />

    <EditText
        android:id="@+id/etNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/tvTel"
        tools:layout_editor_absoluteX="64dp" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvDescripcion"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="requestCode"
        android:text="@string/btEnviarCod"
        app:layout_constraintTop_toBottomOf="@+id/etNum"
        tools:layout_editor_absoluteX="133dp" />

    <Button
        android:id="@+id/btIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="signIn"
        android:text="@string/btIngresar"
        app:layout_constraintTop_toBottomOf="@+id/etCod"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etCod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcion"
        tools:layout_editor_absoluteX="47dp" />

</android.support.constraint.ConstraintLayout>